...
struct CharacterListView: View {
    @StateObject var viewModel = CharacterViewModel()

    var body: some View {
        NavigationView {
            VStack {
                TextField("Search characters...", text: $viewModel.searchText)
                    .textFieldStyle(RoundedBorderTextFieldStyle())
                    .padding()
                    .accessibilityLabel(Text(" Search Button"))
                    .accessibilityHint(Text("Enter the name of the character to search"))
                
                if viewModel.isLoading {
...
